fix: Dockerfile of backend

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,24 @@
-# Step 1: Use an official Node.js runtime as a parent image
+# Use Node.js as the base image
 FROM node:16
 
-# Step 2: Set the working directory inside the container
+# Set the working directory
 WORKDIR /app
 
-# Step 3: Copy package.json and install dependencies
+# Copy package.json and install dependencies
 COPY backend/package.json /app/package.json
 RUN npm install
 
-# Step 4: Copy the rest of the backend code
+# Copy the rest of the code
 COPY backend /app
 
-# Step 5: Expose the port your backend listens to
+# Set environment variables
+ARG NODE_ENV
+ARG VERSION
+ENV NODE_ENV=$NODE_ENV
+ENV VERSION=$VERSION
+
+# Expose the port your backend listens to
 EXPOSE 3000
 
-# Step 6: Define the command to run your app
-CMD ["npm", "start"]
+# Start the backend app
+CMD ["npm", "run", "dev"]
