--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "hello-jekins-nodejs",
-  "version": "1.0.0",
+  "name": "hello-jekins-nodejs-backend",
+  "version": "0.1.0",
   "main": "index.js",
   "scripts": {
+    "dev": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
